# LogParserX

./: .gitignore  Debug.md  README.md  Survey.md  requirements.txt  toDoList.md
data/: dataset.json  description.txt
data/classified_data/: class_1.json  class_2.json  class_3.json  class_4.json  instruction.md
data/generated_data/: class_1.json  class_2.json  class_3.json  class_4.json
refs/crewai-obsidian/: gpt-3-5-turbo-1106.py
refs/crewai-obsidian/tools/: custom_tools.py
refs/docs/: LogParserX-initial Presentation.odp  LogParserX-initial Presentation.pptx
refs/mytest/: README.md  envs.md  pyproject.toml  requirements.txt
refs/mytest/db/: chroma.sqlite3
refs/mytest/output/: report.md
refs/mytest/src/mytest/: crew.py  main.py
src/: demo.py  extract.py  generate.py  test.py
src/LogParserX/knowledge/: faster_tool.py  pattern.py
src/LogParserX/learn/: DataGeneration.py  DataGenerator.py  Executor.py  MergeRegexController.py  NewRegexGeneration.py  RegexChecker.py  WU.py  output.py  test.py  update.py
src/LogParserX/log/: crewai_20250221162532.log.txt  crewai_20250221164057.log.txt  crewai_20250221165154.log.txt  crewai_20250225004835.log.txt
src/LogParserX/output/: result.txt  result_multi.txt  result_ori.txt
src/LogParserX/trace/: trace_20250221022031.txt  trace_20250221024445.txt  trace_20250225005956.txt  trace_20250226025223.txt  trace_20250227054650.txt  (+3 more)
src/data_analysis/: classify_log.py  exps.md  faster_tool.py  info.md  json_parser.py  new_eval.py  official_testing.py  regex_pattern.py  single.py  testing_regx.py  tool.py
(+285 files in other folders)
