[project]
name = "mytest"
version = "0.1.0"
description = "mytest using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
mytest = "mytest.main:run"
run_crew = "mytest.main:run"
train = "mytest.main:train"
replay = "mytest.main:replay"
test = "mytest.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
